--- a/content/appa.html
+++ b/content/appa.html
@@ -30,7 +30,7 @@ background(51 102, 153); // &#161;Error! Falta una coma</pre>
 <p>Tambi&#xe9;n hay un punto y coma al final de cada l&#xed;nea. El punto y coma se usa como un punto. Se&#xf1;ala que se acab&#xf3; una instrucci&#xf3;n, para que el computador pueda buscar el inicio de la siguiente. Si omites el punto y coma, tu navegador lo averiguar&#xe1; de todos modos, pero se recomienda por consistencia que uses punto y coma. Sin embargo, la siguiente l&#xed;nea no tendr&#xed;a problemas:</p>
 
 <pre data-code-language="p5js" data-type="programlisting">
-background(51, 102, 153) // Falta el punto y coma, no hay problema.</pre>
+background(51, 102, 153) <!--// Falta el punto y coma, no hay problema.--></pre>
 
 <p>El computador no perdona ni la menor omisi&#xf3;n o desviaci&#xf3;n de lo esperado. Si recuerdas estos consejos, cometer&#xe1;s menos errores. Pero si te equivocas al escribir, como nos ocurre a todos, no es un problema. Tu navegador te alertar&#xe1; sobre el problema, y cuando est&#xe9; corregido, el programa se ejecutar&#xe1; <a contenteditable="false" data-primary="coding tips" data-secondary="functions and parameters" data-startref="ctaafp" data-type="indexterm"></a><a contenteditable="false" data-primary="parameters" data-startref="pappa" data-type="indexterm"></a><a contenteditable="false" data-primary="functions" data-startref="fappa" data-type="indexterm"></a>correctamente.</p>
 </section>
