--- a/content/ch01-hello.html
+++ b/content/ch01-hello.html
@@ -28,7 +28,7 @@
 
 <p>Las personas han estado haciendo im&#xE1;genes con computadores desde los a&#xF1;os 1960s, y hay mucho que podemos aprender de esta historia. Por ejemplo, antes de que los computadores pudieran proyectar a pantallas CRT o LCD, se usaban grandes m&#xE1;quinas trazadoras (<a data-type="xref" href="#Fig_01_02">Figura 1-2</a>) para dibujar las im&#xE1;genes. En la vida, todos nos paramos sobre hombros de gigantes, y los titanes de p5.js incluyen pensadores del dise&#xF1;o, gr&#xE1;fica computacional, arte, arquitectura, estad&#xED;stica y otras disciplinas afines. Dale un vistazo a <em>Sketchpad</em> (1963) de Ivan Sutherland, <em>Dynabook</em> (1968) de Alan Kay y a otros artistas destacados en el libro de Ruth Leavitt <em>Artist and Computer </em><span data-type="footnote"><a href="http://www.atariarchives.org/artist/"><em class="hyperlink">http://www.atariarchives.org/artist/</em></a></span> (Harmony Books, 1976). Los archivos de ACM SIGGRAPH y de Ars Electronica brindan atisbos fascinantes en la historia de la gr&#xE1;fica y el software.</p>
 
-<figure id="Fig_01_02"><img alt="Fig 01 02" src="images/gspj_0102.png" />
+<figure id="Fig_01_02"><img alt="Fig 01 02" src="images/gspj_0102-2.png" />
 <figcaption><b>Figura 1-2. </b>Demostraci&#xf3;n de dibujo por Manfred Mohr en el Musée d'Art Moderne de la Ville de Paris usando la trazadora Benson y un computador digital, 11 de mayo 1971 (foto por Rainer Mürle, cortes&#xed;a de bitforms gallery, New York)</figcaption>
 </figure>
 </section>
