--- a/content/copyright.html
+++ b/content/copyright.html
@@ -3,7 +3,7 @@
 
 <p class="author">por <span class="firstname">Lauren </span> <span class="surname">McCarthy</span>, <span class="firstname">Casey </span> <span class="surname">Reas</span>, y <span class="firstname">Ben </span> <span class="surname">Fry</span>. Traducido por <span class="firstname">Aarón </span> <span class="surname">Montoya-Moraga</span></p>
 
-<p class="copyright">Copyright © 2016 Maker Media. Todos los derechos reservados. Traducción al español © 2017 Processing Foundation</p>
+<p class="copyright">Copyright © 2016 Maker Media. Todos los derechos reservados. Traducción al español © 2018 Processing Foundation</p>
 
 <p class="printlocation">Impreso en Estados Unidos.</p>
 
@@ -24,7 +24,7 @@
 </ul>
 
 <ul class="printings">
-	<li><span class="printedition">Diciembre 2017:</span> primera edición</li>
+	<li><span class="printedition">Abril 2018:</span> primera edición</li>
 </ul>
 <!--Add additional revdate spans below as needed.-->
 
@@ -45,7 +45,7 @@
 <div class="copyright-bottom">
 <!-- PDF ISBN: 978-0-9998813-0-9 -->
 <!-- PRINT ISBN: 978-0-9998813-1-6 -->
-<p class="isbn">978-0-9998813-0-9</p>
+<p class="isbn">978-0-9998813-1-6</p>
 
 <!--<p class="printer">[LSI]</p>-->
 </div>
