--- a/content/cover.html
+++ b/content/cover.html
@@ -1,3 +1,4 @@
 <figure data-type="cover">
-<img src="images/p5js_ES_Cover.png"/>
+  <p class="pagebreak-after"></p>
+<!-- <img src="images/p5js_ES_Cover.png"/> -->
 </figure>
