--- a/content/ch04-variables.html
+++ b/content/ch04-variables.html
@@ -199,7 +199,7 @@ function draw() {
 <pre data-code-language="p5js" data-type="programlisting">
 var x = 4 + 4 * 5; // Se le asigna el valor 24 a x</pre>
 
-<p>La expresi&#xF3;n 4 * 5 es evaluada primero porque la multiplicaci&#xF3;n tiene la prioridad m&#xE1;s alta. Luego, se le suma 4 al producto <span class="keep-together">4 * 5</span>, resultando 24. Finalmente, como el <a contenteditable="false" data-primary="assignment operator" data-type="indexterm">&nbsp;</a><em>operador de asignaci&#xF3;n</em> (el signo <em>igual</em>) tiene la menor predecencia, el valor 24 es asignado a la variable <em>x</em>. Esto se puede aclarar con el uso de par&#xE9;ntesis, pero el resultado es el mismo:</p>
+<p>La expresi&#xF3;n 4 * 5 es evaluada primero porque la multiplicaci&#xF3;n tiene la prioridad m&#xE1;s alta. Luego, se le suma 4 al producto <span class="keep-together">4 * 5</span>, resultando 24. Finalmente, como el <a contenteditable="false" data-primary="assignment operator" data-type="indexterm">&nbsp;</a><em>operador de asignaci&#xF3;n</em> (el signo <em>igual</em>) tiene la menor precedencia, el valor 24 es asignado a la variable <em>x</em>. Esto se puede aclarar con el uso de par&#xE9;ntesis, pero el resultado es el mismo:</p>
 
 <pre data-code-language="p5js" data-type="programlisting">
 var x = 4 + (4 * 5); // Se le asigna el valor 24 a x</pre>
