--- a/content/ch02-starting-to-code.html
+++ b/content/ch02-starting-to-code.html
@@ -150,7 +150,7 @@ function draw() {
 
 <p>Ahora puedes abrir este directorio en tu editor de c&#xF3;digo y empezar a hacer un nuevo bosquejo. Cuando quieras verlo en el navegador, abre el archivo <em>index.html </em>ubicado en tu nuevo directorio <em>Proyecto-2</em>.</p>
 
-<p>Siempre es una buena idea grabar frecuentemente tus bosquejos. Mientras vas probando cosas nuevas, graba tu bosquejo con diferentes nombres, (Archivo→Guardar como), para que as&#xED; siempre puedas volver a versiones anteriores.  Esto es especialmente &#xFA;til si algo&nbsp;<a contenteditable="false" data-primary="new project" data-startref="np2" data-type="indexterm">&nbsp;</a>falla.</p>
+<p>Siempre es una buena idea grabar frecuentemente tus bosquejos. Mientras vas probando cosas nuevas, graba tu bosquejo con diferentes nombres, (Archivo→Guardar como), para que as&#xED; siempre puedas volver a versiones anteriores.  Esto es especialmente &#xFA;til si algo&nbsp;<a contenteditable="false" data-primary="new project" data-startref="np2" data-type="indexterm"></a>falla.</p>
 
 <div data-type="note">
 <p>Un error com&#xFA;n es estar editando un proyecto pero estar viendo otro en el navegador, haciendo que no puedas ver los cambios que has realizado. Si te das cuenta que tu programa se ve igual a pesar de haber hecho cambios en tu c&#xF3;digo, revisa que est&#xE1;s viendo el archivo <em>index.html</em> correcto.</p>
@@ -166,6 +166,6 @@ function draw() {
 
 <p>La <em>Referencia de p5.js</em> explica cada elemento de c&#xF3;digo con una descripci&#xF3;n y ejemplos. Los programas de la <em>Referencia</em> son mucho m&#xE1;s cortos (usualmente cuatro o cinco l&#xED;neas) y m&#xE1;s f&#xE1;ciles de seguir que los ejemplos de la <a href="https://p5js.org/es/learn/">p&#xE1;gina Aprender</a>. Ten en cuenta que estos ejemplos por simplicidad usualmente omiten <code>setup()</code> y <code>draw()</code>, pero estas l&#xED;neas de c&#xF3;digo que ves deber&#xE1;n ubicarse dentro de uno de estos bloques para poder ser ejecutadas. Recomendamos mantener la p&#xE1;gina de <em>Referencia</em> abierta mientras est&#xE9;s leyendo este libro y mientras est&#xE9;s programando. Puede ser navegada por tema o usando la barra de b&#xFA;squeda en la parte superior de la p&#xE1;gina.</p>
 
-<p>La <em>Referencia</em> fue escrita pensando en el principiante; esperamos que sea clara y facil de entender. Estamos muy agradecidos de las personas que han encontrado errores y los han se&#xF1;alado. Si crees que puedes mejorar una entrada en la referencia o que has encontrado alg&#xFA;n error, por favor haznos saber esto haciendo click en el enlace en la parte inferior de cada<a contenteditable="false" data-primary="coding basics" data-startref="cb2" data-type="indexterm">&nbsp;</a>p&#xE1;gina de referencia.</p>
+<p>La <em>Referencia</em> fue escrita pensando en el principiante; esperamos que sea clara y f&#xE1;cil de entender. Estamos muy agradecidos de las personas que han encontrado errores y los han se&#xF1;alado. Si crees que puedes mejorar una entrada en la referencia o que has encontrado alg&#xFA;n error, por favor haznos saber esto haciendo click en el enlace en la parte inferior de cada<a contenteditable="false" data-primary="coding basics" data-startref="cb2" data-type="indexterm">&nbsp;</a>p&#xE1;gina de referencia.</p>
 </section>
 </section>
