--- a/content/ch03-draw.html
+++ b/content/ch03-draw.html
@@ -51,7 +51,7 @@ function draw() {
 <section data-type="sect1">
 <h1>Figuras b&#xE1;sicas</h1>
 
-<p>p5.js incluye un grupo de funciones para dibujar figuras b&#xE1;sicas (ver <a data-type="xref" href="#Fig_03_01">Figura 3-1</a>). Figuras simples<a contenteditable="false" data-primary="shapes" data-secondary="drawing basic" data-type="indexterm" id="s3db">&nbsp;</a><a contenteditable="false" data-primary="basic shapes" data-type="indexterm" id="bs3">&nbsp;</a><a contenteditable="false" data-primary="drawing" data-secondary="lines" data-type="indexterm" id="d3lines">&nbsp;</a><a contenteditable="false" data-primary="drawing" data-secondary="shapes" data-tertiary="basic" data-type="indexterm" id="d3sb">&nbsp;</a>como l&#xED;neas pueden ser combinadas para crear figuras m&#xE1;s complicadas como una hoja o una cara.</p>
+<p>p5.js incluye un grupo de funciones para dibujar figuras b&#xE1;sicas (ver <a data-type="xref" href="#Fig_03_01">Figura 3-1</a>). Figuras simples<a contenteditable="false" data-primary="shapes" data-secondary="drawing basic" data-type="indexterm" id="s3db">&nbsp;</a><a contenteditable="false" data-primary="basic shapes" data-type="indexterm" id="bs3"></a><a contenteditable="false" data-primary="drawing" data-secondary="lines" data-type="indexterm" id="d3lines"></a><a contenteditable="false" data-primary="drawing" data-secondary="shapes" data-tertiary="basic" data-type="indexterm" id="d3sb"></a>como l&#xED;neas pueden ser combinadas para crear figuras m&#xE1;s complicadas como una hoja o una cara.</p>
 
 <p>Para dibujar una sola&nbsp;<a contenteditable="false" data-primary="lines" data-secondary="drawing" data-type="indexterm" id="ld3">&nbsp;</a>l&#xED;nea, necesitamos cuatro par&#xE1;metros: dos para el punto inicial y dos para el final.</p>
 
