--- a/content/ch05-response.html
+++ b/content/ch05-response.html
@@ -31,7 +31,7 @@ Estoy dibujando
 3
 ...</pre>
 
-<p>En el programa de ejemplo anterior, las funciones <code>print()</code> escriben el texto "Estoy dibujando" seguido del contador actual de cuadros, tarea efectuada por la variable especial <code>frameCount</code> (1, 2, 3, …). El texto aparece en la consola de tu navegador.</p>
+<p>En el programa del ejemplo anterior, las funciones <code>print()</code> escriben el texto "Estoy dibujando" seguido del contador actual de cuadros, tarea efectuada por la variable especial <code>frameCount</code> (1, 2, 3, …). El texto aparece en la consola de tu navegador.</p>
 </section>
 
 <section data-type="sect2">
