--- a/content/ch06-translate.html
+++ b/content/ch06-translate.html
@@ -337,7 +337,7 @@ function draw() {
   if (mouseIsPressed) {
     scale(1.0);
   } else {
-    scale(0.6);  // 60% de tamaño si el ratón está presionado
+    scale(0.6);  // 60% de tamaño si el ratón no está presionado
   }
 
   // Cuerpo
